--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <header>
         <div class="main">
             <ul>
-                <li><a href="https://www.iitr.ac.in/">Home</a></li>
+                <li><a href="#">Home</a></li>
                 <li><a href="#">About me</a></li>
-                <li><a href="https://www.iitr.ac.in/ACAD/pages/Photo_Gallery.html">Gallery</a></li>
+                <li><a href="#">Gallery</a></li>
                 <li><a href="#">Help</a></li>
             </ul>
         </div>
