--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
                         <p>Kendriya Vidyalaya Bulandshahr, UP</p>
                     </p>
                          <div class="buttons">
+                             <a href="https://new.iitr.ac.in/"><button class="btn">Visit</button></a>
+                         </div>
+                         <div class="buttons">
                              <a href="https://bulandshahar.kvs.ac.in/"><button class="btn">Visit</button></a>
                          </div>
                 </div>
