--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
                     <a href="https://www.facebook.com/profile.php?id=100055995302329" class="social" >Facebook</a>
                     <a href="https://www.instagram.com/_raosatyam_yadav/" class="social" >Instagram</a>
                     <a href="https://www.linkedin.com/in/raosatyamyadav?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3B3dWOHFm7SuqxYcM0jTRkyg%3D%3D" class="social" >Linkedin</a>
+                    <a href="https://github.com/raosatyam" class="social" >Github</a>
+                    
                 </div>
                 <div class="second">
                     <img src="social.jpg" alt="social">
