--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <header>
         <div class="main">
             <ul>
-                <li><a href="https://raosatyam.github.io/portfolio.github.io">Home</a></li>
+                <li><a href="https://raosatyam.github.io/portfolio">Home</a></li>
                 <li><a href="#">About me</a></li>
                 <li><a href="#">Gallery</a></li>
                 <li><a href="#">Help</a></li>
